tolk-tester/tests/invalid-syntax/err-3034.tolk
struct A {
    id;
}

/**
@compilation_should_fail
@stderr expected `: <type>`, got `;`
*/
